Fixes for github action to set Meraki password
Signed-off-by: Jeff Squyres <jeff@squyres.com>

--- a/.github/workflows/meraki-password.yaml
+++ b/.github/workflows/meraki-password.yaml
@@ -20,7 +20,7 @@ jobs:
     - name: Setup pips
       run: pip install -r meraki-80211x-users/requirements.txt
 
-    - name: Run the script:
+    - name: Run the script
       run: |
         cd meraki-80211x-users
         ./meraki-renew-user.py \
