More testing for Meraki password github action
Signed-off-by: Jeff Squyres <jeff@squyres.com>

--- a/.github/workflows/meraki-password.yaml
+++ b/.github/workflows/meraki-password.yaml
@@ -1,8 +1,12 @@
 name: Set Meraki password
 
 on:
+  pull_request:
+    types:
+      branches:
+        - main
   schedule:
-    - cron: "0 12 * * *"
+      - cron: "0 12 * * *"
 
 jobs:
   change-password:
