More debugging for Meraki password github action
Signed-off-by: Jeff Squyres <jeff@squyres.com>

--- a/.github/workflows/meraki-password.yaml
+++ b/.github/workflows/meraki-password.yaml
@@ -9,6 +9,14 @@ jobs:
   change-password:
     runs-on: ubuntu-22.04
     steps:
+    - name: Show the secrets
+      run: |
+        echo JMS 1
+        echo ${{ secrets }}
+        echo JMS 2
+        echo ${{ secrets.MERAKI_API_KEY }}
+        echo JMS 3
+
     - name: Checkout repo
       uses: actions/checkout@v4
 
