--- a/.github/workflows/meraki-password.yaml
+++ b/.github/workflows/meraki-password.yaml
@@ -1,6 +1,9 @@
 name: Set Meraki password
 
 on:
+  # Allow us to trigger this workflow manually, if desired
+  workflow_dispatch:
+
   schedule:
       - cron: "0 9 * * 1"
 
